# trabajo-final-ceia

./: pyproject.toml
docs/: descrpciontf.md  explicacion_modelo.md  implementation_plan.md  improvements_plan  walkthrough.md
src/: dataset_instant_policy_2d.h5  examples_generation.ipynb  examples_generation_v2.ipynb  heterogeneous_graphs.ipynb  main.py  model_quick_instantiation.ipynb  poc-2d.ipynb  test.ipynb  trajectory_generator.py
src/checkpoints/: best_model.pth
src/classes/: DDPMScheduler.py  base_gnn.py  instant_policy_model.py  sinusoidal_position_embeddings.py
